import no.nav.testnav.dependencies.gradle.DependenciesPlugin

plugins {
    id "org.sonarqube" version "3.3"
    id 'no.nav.testnav.dependencies'
    id 'java'
    id 'org.springframework.boot' version "2.5.6"
    id 'io.spring.dependency-management' version "1.0.11.RELEASE"
}

sonarqube {
    properties {
        property "sonar.sourceEncoding", "UTF-8"
        property "sonar.projectKey", "testnav-pdl-forvalter"
        property "sonar.projectName", "testnav-pdl-forvalter"
        property "sonar.organization", "navit"
        property "sonar.host.url", "https://sonarcloud.io"
        property "sonar.project.monorepo.enabled", true
        property "sonar.login", System.getenv("SONAR_TOKEN")
    }
}

bootJar {
    archiveFileName = "app.jar"
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${DependenciesPlugin.springCloud}"
    }
}

properties {
    compileJava.options.encoding = 'UTF-8'
}

test {
    useJUnitPlatform()
}

repositories {
    maven {
        url = uri('https://repo1.maven.org/maven2/')
    }
    mavenLocal()
}

java.sourceCompatibility = JavaVersion.VERSION_17

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'

    implementation 'org.springframework.cloud:spring-cloud-starter-vault-config'
    implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap' // TODO remove legacy bootstrap config

    implementation 'no.nav.testnav.libs:database'
    implementation 'no.nav.testnav.libs:data-transfer-objects'
    implementation 'no.nav.testnav.libs:servlet-core'
    implementation 'no.nav.testnav.libs:servlet-security'

    implementation 'org.hibernate.validator:hibernate-validator'
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.postgresql:postgresql'

    implementation "ma.glasnost.orika:orika-core:${DependenciesPlugin.orikaVersion}"
    implementation "org.springdoc:springdoc-openapi-ui:${DependenciesPlugin.springdocOpenapi}"
    implementation "net.logstash.logback:logstash-logback-encoder:${DependenciesPlugin.logstashLogbackEncoder}"

    implementation "org.projectlombok:lombok:${DependenciesPlugin.lombokVersion}"
    annotationProcessor "org.projectlombok:lombok:${DependenciesPlugin.lombokVersion}"

    testImplementation 'no.nav.testnav.libs:testing'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testAnnotationProcessor "org.projectlombok:lombok:${DependenciesPlugin.lombokVersion}"
}